fixed header spacing

--- a/style.css
+++ b/style.css
@@ -151,13 +151,17 @@ h2 {
 }
 
 #footer {
+    padding-top: 20px;
+    padding-bottom: 20px;
     color: white;
     display: flex;
     font-family: 'Barlow Condensed', sans-serif;
     justify-content: center;
+    font-size: 25px;
 }
 
 #end {
+    padding: 50px;
     justify-content: center;
     background-color: white;
     height: 300px;
